test/errors/circular-dependencies-two/packages/library-tracking/index.ts
export * from '@library-cirulcar-dependencies-two/tracking/src/library.module';
export * from '@library-cirulcar-dependencies-two/tracking/src/tracking/tracking.service';
